--- a/delice/delice.html
+++ b/delice/delice.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 
 <head>
     <title>Le délice des papilles</title>
@@ -19,7 +19,15 @@
             <h2>Le délice des papilles</h2>
         </header>
         <div id="menu">
-            <h3 id="hr_commencer">Pour bien commencer</h3>
+            <div id="commencer">
+                <div class="left_line">
+                    <hr>
+                </div>
+                <h3>Pour bien commencer</h3>
+                <div class="right_line">
+                    <hr>
+                </div>
+            </div>
             <section id="entrée">
                 <div class="prix">
                     <p>Tartare de thon assaisonné au yuzu</p>
@@ -34,8 +42,15 @@
                     <p class="tarif">56€</p>
                 </div>
             </section>
-
-            <h3 id="hr_continuer">Pour bien continuer</h3>
+            <div id="continuer">
+                <div class="left_line">
+                    <hr>
+                </div>
+                <h3>Pour bien continuer</h3>
+                <div class="right_line">
+                    <hr>
+                </div>
+            </div>
             <section id="plats">
                 <div class="prix">
                     <p>Poulet rôti aux herbes de provence et sa crême de truffe</p>
@@ -50,8 +65,16 @@
                     <p class="tarif">115€</p>
                 </div>
             </section>
-            <h3 id="hr_terminer">Pour bien terminer</h3>
-            <div id="dessert">
+            <div id="terminer">
+                <div class="left_line">
+                    <hr>
+                </div>
+                <h3>Pour bien terminer</h3>
+                <div class="right_line">
+                    <hr>
+                </div>
+            </div>
+            <section id="dessert">
                 <div class="prix">
                     <p>Farandole de desserts du chef</p>
                     <p class="tarif">55€</p>
@@ -64,13 +87,14 @@
                     <p>Tiramisu à la noisette</p>
                     <p class="tarif">55€</p>
                 </div>
-            </div>
+            </section>
             <footer>
                 <div class="wiggle">
                     <p><a href="../mentions_legales.html"><span>Mentions légales</span></a></p>
                 </div>
                 <div class="wiggle">
-                    <p><a href="mailto:reservation@ohmyfood.com" title="Contactez-nous"><span> Contactez-nous</span></a>
+                    <p><a href="mailto:reservation@ohmyfood.com" title="Contactez-nous"><span>
+                                Contactez-nous</span></a>
                     </p>
                 </div>
             </footer>
