--- a/note/note.html
+++ b/note/note.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 
 <head>
     <title>La note enchantée</title>
@@ -20,8 +20,16 @@
             <h2>La note enchantée</h2>
         </header>
         <div id="menu">
-            <h3 class="hr">Prélude</h3>
-            <section id="prelude">
+            <div id="prelude">
+                <div class="left_line">
+                    <hr>
+                </div>
+                <h3>Prélude</h3>
+                <div class="right_line">
+                    <hr>
+                </div>
+            </div>
+            <section id="entrée">
                 <div class="prix">
                     <p>Ravioles de foie gras accompagnés de leur crème à la truffe</p>
                     <p class="tarif">98€</p>
@@ -39,10 +47,16 @@
                     <p class="tarif">105€</p>
                 </div>
             </section>
-
-            <h3 class="hr">Point d'orgue</h3>
-
-            <section id="point_dorgue">
+            <div id="point_dorgue">
+                <div class="left_line">
+                    <hr>
+                </div>
+                <h3>Point d'orgue</h3>
+                <div class="right_line">
+                    <hr>
+                </div>
+            </div>
+            <section id="plats">
                 <div class="prix">
                     <p>Noix de coquille Saint Jacques sur lit de purée de céleri-rave</p>
                     <p class="tarif">102€</p>
@@ -56,14 +70,21 @@
                     <p class="tarif">169€</p>
                 </div>
             </section>
-            <h3 class="hr">Mouvement final</h3>
-            <section id="mouvement_final">
+            <div id="mouvement_final">
+                <div class="left_line">
+                    <hr>
+                </div>
+                <h3>Mouvement final</h3>
+                <div class="right_line">
+                    <hr>
+                </div>
+            </div>
+            <section id="dessert">
                 <p>Macaron noisette et chocolat, glace au caramel brun et sel de guérande</p>
                 <p>Baba au rhum revisité avec son coulis de citron</p>
                 <p>Tarte au citron meringuée destructurée</p>
             </section>
         </div>
-
         <h2><i class="fas fa-music"></i>&nbsp;La note enchantée</h2>
     </div>
     <footer>
@@ -71,7 +92,9 @@
             <p><a href="../mentions_legales.html"><span>Mentions légales</span></a></p>
         </div>
         <div class="wiggle">
-            <p><a href="mailto:reservation@ohmyfood.com" title="Contactez-nous"><span> Contactez-nous</span></a></p>
+            <p><a href="mailto:reservation@ohmyfood.com" title="Contactez-nous"><span>
+                        Contactez-nous</span></a>
+            </p>
         </div>
     </footer>
 </body>
