--- a/palette/palette.html
+++ b/palette/palette.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 
 <head>
     <title>La palette du goût</title>
@@ -19,7 +19,15 @@
             <h2>La palette du goût</h2>
         </header>
         <div id="menu">
-            <h3 class="hr">Esquisse</h3>
+            <div id="esquisse">
+                <div class="left_line">
+                    <hr>
+                </div>
+                <h3>Esquisse</h3>
+                <div class="right_line">
+                    <hr>
+                </div>
+            </div>
             <section id="entrée">
                 <div class="prix">
                     <p>Fricassée d'escargot au piment d'espelette</p>
@@ -34,7 +42,15 @@
                     <p class="tarif">65€</p>
                 </div>
             </section>
-            <h3 class="hr">Oeuvre de maître</h3>
+            <div id="oeuvre">
+                <div class="left_line">
+                    <hr>
+                </div>
+                <h3>Oeuvre de maître</h3>
+                <div class="right_line">
+                    <hr>
+                </div>
+            </div>
             <section id="plats">
                 <div class="prix">
                     <p>Filet de boeuf aux herbes accompagné de sa ribambelle de légumes</p>
@@ -49,7 +65,15 @@
                     <p class="tarif">125€</p>
                 </div>
             </section>
-            <h3 class="hr">Au sommet de l'art</h3>
+            <div id="sommet">
+                <div class="left_line">
+                    <hr>
+                </div>
+                <h3>Au sommet de l'art</h3>
+                <div class="right_line">
+                    <hr>
+                </div>
+            </div>
             <section id="dessert">
                 <div class="prix">
                     <p>Paris-Brest revisité</p>
@@ -70,7 +94,8 @@
                 <p><a href="../mentions_legales.html"><span>Mentions légales</span></a></p>
             </div>
             <div class="wiggle">
-                <p><a href="mailto:reservation@ohmyfood.com" title="Contactez-nous"><span> Contactez-nous</span></a></p>
+                <p><a href="mailto:reservation@ohmyfood.com" title="Contactez-nous"><span>
+                            Contactez-nous</span></a></p>
             </div>
         </footer>
     </div>
