ajout animation effet souligné sous titre H3

--- a/chic/chic.html
+++ b/chic/chic.html
@@ -23,7 +23,7 @@
                 <div class="left_line">
                     <hr>
                 </div>
-                <h3>Pour se mettre en appétit</h3>
+                <h3><span id="underline1">Pour se mettre en appétit</h3>
                 <div class="right_line">
                     <hr>
                 </div>
@@ -46,7 +46,7 @@
                 <div class="left_line">
                     <hr>
                 </div>
-                <h3>Plaisir des papilles</h3>
+                <h3><span id="underline2">Plaisir des papilles</span></h3>
                 <div class="right_line">
                     <hr>
                 </div>
@@ -69,7 +69,7 @@
                 <div class="left_line">
                     <hr>
                 </div>
-                <h3>Gourmandise sucrées</h3>
+                <h3><span id="underline3">Gourmandise sucrées</span></h3>
                 <div class="right_line">
                     <hr>
                 </div>
