--- a/note/note.html
+++ b/note/note.html
@@ -24,7 +24,7 @@
                 <div class="left_line">
                     <hr>
                 </div>
-                <h3>Prélude</h3>
+                <h3><span class="underline">Prélude</span></h3>
                 <div class="right_line">
                     <hr>
                 </div>
@@ -51,7 +51,7 @@
                 <div class="left_line">
                     <hr>
                 </div>
-                <h3>Point d'orgue</h3>
+                <h3><span class="underline">Point d'orgue</span></h3>
                 <div class="right_line">
                     <hr>
                 </div>
@@ -74,7 +74,7 @@
                 <div class="left_line">
                     <hr>
                 </div>
-                <h3>Mouvement final</h3>
+                <h3><span class="underline">Mouvement final</span></h3>
                 <div class="right_line">
                     <hr>
                 </div>
