--- a/palette/palette.html
+++ b/palette/palette.html
@@ -23,7 +23,7 @@
                 <div class="left_line">
                     <hr>
                 </div>
-                <h3>Esquisse</h3>
+                <h3><span class="underline">Esquisse</span></h3>
                 <div class="right_line">
                     <hr>
                 </div>
@@ -46,7 +46,7 @@
                 <div class="left_line">
                     <hr>
                 </div>
-                <h3>Oeuvre de maître</h3>
+                <h3><span class="underline">Oeuvre de maître</span></h3>
                 <div class="right_line">
                     <hr>
                 </div>
@@ -69,7 +69,7 @@
                 <div class="left_line">
                     <hr>
                 </div>
-                <h3>Au sommet de l'art</h3>
+                <h3><span class="underline">Au sommet de l'art</h3></span>
                 <div class="right_line">
                     <hr>
                 </div>
