--- a/delice/delice.html
+++ b/delice/delice.html
@@ -22,8 +22,8 @@
             <div id="commencer">
                 <div class="left_line">
                     <hr>
-                </div>
-                <h3>Pour bien commencer</h3>
+                </div>              
+                <h3><span id="underline1">Pour bien commencer</span></h3>               
                 <div class="right_line">
                     <hr>
                 </div>
@@ -46,7 +46,7 @@
                 <div class="left_line">
                     <hr>
                 </div>
-                <h3>Pour bien continuer</h3>
+                <h3><span id="underline2">Pour bien continuer</span></h3>
                 <div class="right_line">
                     <hr>
                 </div>
@@ -68,8 +68,8 @@
             <div id="terminer">
                 <div class="left_line">
                     <hr>
-                </div>
-                <h3>Pour bien terminer</h3>
+                </div>               
+                    <h3><span id="underline3">Pour bien terminer</span></h3>
                 <div class="right_line">
                     <hr>
                 </div>
