--- a/chic/chic.html
+++ b/chic/chic.html
@@ -23,7 +23,7 @@
                 <div class="left_line">
                     <hr>
                 </div>
-                <h3><span id="underline1">Pour se mettre en appétit</h3>
+                <h3><span id="underline1">Pour se mettre en appétit</span></h3>
                 <div class="right_line">
                     <hr>
                 </div>
