--- a/palette/palette.html
+++ b/palette/palette.html
@@ -69,7 +69,7 @@
                 <div class="left_line">
                     <hr>
                 </div>
-                <h3><span class="underline">Au sommet de l'art</h3></span>
+                <h3><span class="underline">Au sommet de l'art</span></h3>
                 <div class="right_line">
                     <hr>
                 </div>
