fin des mises en page du projet ohmyfood

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 
 <head>
-    <title>Title</title>
+    <title>Menus Ohmyfood</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css" />
@@ -18,7 +18,7 @@
             <article id="note">
                 <a href="note/note.html">
                     <i class="fas fa-music"></i>
-                    <h2>La note enchantée </h2>
+                    <h2>La note enchantée</h2>
                     <p><strong>MENU</strong></p>
                 </a>
             </article>
